2004-01-26  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/literalop.c (mulWrapper): Added a
	wrapper to remove integer overflow warnings.

	* support/regression/tests/float_trans.c: Made work on host.

	* support/regression/ports/ucz80/spec.mk (UCZ80): Made detect the
	location of sz80.

	* support/regression/generate-cases.py (main): Changed from inline
	to a main method.

	* doc/Makefile (install): Changed to depth first to get rid of
	missing directory install warning.

	* as/Makefile (install-doc): Made work on Mac.

2004-01-25 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCast.c: added an additional type flow in decorateType() of
	opposite direction, see feature request #860006; it's enabled at runtime
	by setting the environment variable SDCC_NEWTYPEFLOW
	* src/SDCCast.h: changed prototype of decorateType()
	* src/SDCCglue.c (emitRegularMap): updated call of decorateType()
	* src/SDCCicode.c (geniCodeDivision) (geniCodeModulus): promotion from
	'char' to 'int' can be omitted, if both operands are 'unsigned char';
	see feature request #877103
	* src/SDCCval.c: updated call of decorateType()
	(valBitwise): fixed bug #882876
	(valMinus): added promotion
	(valLogicAndOr): result is unsigned
	(cheapestVal) (constVal): literals from 0...255 are 'unsigned char' now
	* src/SDCCsymt.c (computeType),
	* src/mcs51/gen.c (genCmpGt) (genCmpLt): literal 'unsigned char'
	must not cause an unsigned operation
	* src/pic/glue (pic14emitRegularMap),
	* src/pic16/glue.c (pic16emitRegularMap): updated call of decorateType()

2004-01-23 Bernhard Held <bernhard@bernhardheld.de>

	* src/pic/pcode.c (PCodeID): commented out left over debug code

2004-01-20 Bernhard Held <bernhard@bernhardheld.de>

	* support/valdiag/tests/overflow.c: added shift tests
	* src/pic/device.c,
	* src/pic/gen.c,
	* src/pic/gen.h,
	* src/pic/glue.c,
	* src/pic/main.c,
	* src/pic/pcode.c,
	* src/pic/pcode.h,
	* src/pic/pcodepeep.c,
	* src/pic/pcoderegs.c,
	* src/pic/ralloc.c,